tests/paczka1/fuzzy1/97662269.err
Error in line 2: kA7pnzast3 S617 69,9
Error in line 11: YQz S325 80,1
Error in line 12: Q22 S544 79,7
Error in line 18: S544 S617 53,7
Error in line 27: S544 S544 Â44,0
